--- a/src/brasil/gov/temas/themes/verde/css/plone.css
+++ b/src/brasil/gov/temas/themes/verde/css/plone.css
@@ -2010,7 +2010,7 @@ div.width-15 { width: 91.5%  }
 div.width-16 { width: 97.75% }
 /* */
 /* */
-div.position-0  { margin-left: -98.875% }
+div.position-0  { margin-left: -98.875% !important}
 div.position-1  { margin-left: -92.625% }
 div.position-2  { margin-left: -86.375% }
 div.position-3  { margin-left: -80.125% }
