--- a/src/brasil/gov/temas/themes/azul/css/style.css
+++ b/src/brasil/gov/temas/themes/azul/css/style.css
@@ -86,6 +86,7 @@
 .item-central .link-publicacoes,
 .item-central .link-fotos,
 .item-central .link-aplicativos,
+.item-central .link-dadosabertos,
 /* icone do botão de busca */
 #header input.searchButton { background-image: url("../img/sprite.png"); }
 /* icone do botão de relatar erros */
