--- a/src/brasil/gov/temas/themes/verde/css/style.css
+++ b/src/brasil/gov/temas/themes/verde/css/style.css
@@ -121,8 +121,8 @@
 /* Portlet de navegação
    ========================================================================== */
 
-#portal-column-one > .portletWrapper dl.portlet.first-item-nav a,
-#portal-column-one > .portletWrapper dl.portlet.first-item-nav a span {
+#portal-column-one > .nav-menu-de-relevancia .first-item-nav a,
+#portal-column-one > .nav-menu-de-relevancia .first-item-nav a span {
     color: #2c67cd !important;
 }
 
