Adiciona estilos para portlet Centrais de Conteúdos em inglês e espanhol.

--- a/src/brasil/gov/temas/themes/amarelo/css/style.css
+++ b/src/brasil/gov/temas/themes/amarelo/css/style.css
@@ -126,6 +126,8 @@
     color: #03316f !important;
 }
 
+.portlet-static-contents-central .portletHeader,
+.portlet-static-centrales-del-contenido .portletHeader,
 .portlet-static-centrais-de-conteudos .portletHeader,
 .portletNavigationTree .portletHeader {
     border-top: 4px solid #03316f;
@@ -211,6 +213,9 @@
         background: #f7c514 url("../img/bg-menu-mobile.png") top right no-repeat;
     }
 
+    .portlet-static-contents-central .portletHeader,
+    .portlet-static-centrales-del-contenido .portletHeader,
+    .portlet-static-centrais-de-conteudos .portletHeader,
     .portlet-static-centrais-de-conteudos .portletHeader,
     .portletNavigationTree .portletHeader {
         background: #edeff1 url("../img/portlet-header.gif") no-repeat 96% center;
