Ajusta nome de centrais de conteúdos em inglês em estilos específicos

--- a/src/brasil/gov/temas/themes/amarelo/css/main.css
+++ b/src/brasil/gov/temas/themes/amarelo/css/main.css
@@ -1004,6 +1004,7 @@ dl.portlet dt a:visited { color: #464a55 !important; }
    ========================================================================== */
 
 .portlet-static-contents-central .portletHeader,
+.portlet-static-resource-center .portletHeader,
 .portlet-static-centrales-del-contenido .portletHeader,
 .portlet-static-centrais-de-conteudos .portletHeader,
 .portletNavigationTree .portletHeader {
@@ -1150,12 +1151,14 @@ dl.portlet ul.navTreeLevel6 li a { padding: 0.55em 4.5em !important; }
    ========================================================================== */
 
 .portlet-static-contents-central .portletItem,
+.portlet-static-resource-center .portletItem,
 .portlet-static-centrales-del-contenido .portletItem,
 .portlet-static-centrais-de-conteudos .portletItem {
     padding: 0 !important;
 }
 
 .portlet-static-contents-central .list-central,
+.portlet-static-resource-center .list-central,
 .portlet-static-centrales-del-contenido .list-central,
 .portlet-static-centrais-de-conteudos .list-central {
     margin: 0;
@@ -2877,6 +2880,7 @@ ul.formTabs { padding: 0 !important; }
     }
 
     .portlet-static-contents-central .portletHeader,
+    .portlet-static-resource-center .portletHeader,
     .portlet-static-centrales-del-contenido .portletHeader,
     .portlet-static-centrais-de-conteudos .portletHeader,
     .portletNavigationTree .portletHeader {
