Ajusta estilo de comentário para resposta de comentário

--- a/src/brasil/gov/temas/themes/amarelo/css/style.css
+++ b/src/brasil/gov/temas/themes/amarelo/css/style.css
@@ -188,6 +188,12 @@ button.context.reply-to-comment-button {
     font-size: 1.1em;
 }
 
+.discussion .reply {
+    clear: both;
+    color: #000000;
+    padding-top: 5px;
+}
+
 
 /* ==========================================================================
    Cabeçalho do portal
