--- a/src/brasil/gov/temas/themes/azul/css/style.css
+++ b/src/brasil/gov/temas/themes/azul/css/style.css
@@ -173,7 +173,7 @@
 
 #footer a { color: #fff; }
 
-#footer .footer-logos { background: #0042b1; }
+#wrapper #footer .footer-logos { background: #0042b1; }
 
 /* Doormat
    ========================================================================== */
