--- a/src/brasil/gov/temas/themes/branco/css/style.css
+++ b/src/brasil/gov/temas/themes/branco/css/style.css
@@ -175,7 +175,7 @@
 
 #footer a { color: #2c66ce; }
 
-#footer .footer-logos { background: #0042b1; }
+#wrapper #footer .footer-logos { background: #0042b1; }
 
 /* Doormat
    ========================================================================== */
