--- a/src/brasil/gov/temas/themes/verde/css/style.css
+++ b/src/brasil/gov/temas/themes/verde/css/style.css
@@ -189,7 +189,7 @@
 
 #footer a { color: #fff; }
 
-#footer .footer-logos { background: #00420c; }
+#wrapper #footer .footer-logos { background: #00420c; }
 
 /* Doormat
    ========================================================================== */
