Adicionando correções para o tamanho do header e o tamanho da fonte no menu de acessibilidade

--- a/src/brasil/gov/temas/themes/amarelo/css/style.css
+++ b/src/brasil/gov/temas/themes/amarelo/css/style.css
@@ -25,7 +25,7 @@
    ========================================================================== */
 
 #header {
-    padding: 14px 0 0 0;
+    padding: 33px 0 0 0;
     background-color: #fbda43;
     /* Old browsers */
     background-color: #f8c60b;
@@ -60,11 +60,8 @@ div#wrapper-barra-brasil {
     position: relative;
     margin: 0 auto;
     max-width: 960px;
-}
-
-#accessibility {
-    top: 43px;
-    position: absolute;
+    font-size: 1.2em;
+    top: 47px;
 }
 
 #accessibility a {
@@ -86,11 +83,6 @@ div#wrapper-barra-brasil {
 /* Menu site actions - Acessibilidade, Alto Contraste, Mapa do site
    ========================================================================== */
 
-#portal-siteactions {
-    top: 43px;
-    position: relative;
-}
-
 #portal-siteactions,
 #portal-language { border-bottom: 1px dotted #03316f; }
 
@@ -99,7 +91,7 @@ div#wrapper-barra-brasil {
 #portal-language a,
 #portal-language a:hover { color: #03316f !important; }
 
-#portal-title-1 { top: 20px; }
+#portal-title-1 { top: 11px; }
 
 /* Menu sobre o portal
    ========================================================================== */
