--- a/src/brasil/gov/temas/themes/amarelo/css/style.css
+++ b/src/brasil/gov/temas/themes/amarelo/css/style.css
@@ -25,7 +25,7 @@
    ========================================================================== */
 
 #header {
-    padding: 14px 0 0 0;
+    padding: 32px 0 0 0;
     background-color: #fbda43;
     /* Old browsers */
     background-color: #f8c60b;
@@ -45,8 +45,24 @@
     filter:progid: DXImageTransform.Microsoft.gradient( startColorstr="#fbda43", endColorstr="#f8c60b",GradientType=1);
 }
 
+/* Menu da Barra
+   ========================================================================== */
+
+div#wrapper-barra-brasil {
+    clear: both;
+    top: -18px;
+}
+
 /* Menu de Acessibilidade
    ========================================================================== */
+
+#accessibility-wrapper {
+    position: relative;
+    margin: 0 auto;
+    max-width: 960px;
+    font-size: 1.2em;
+    top: 47px;
+}
 
 #accessibility a {
     color: #03316f;
@@ -63,6 +79,7 @@
 
 #portal-logo,
 #portal-title { color: #03316f !important; }
+#portal-title-1 { top: 12px; }
 
 /* Menu site actions - Acessibilidade, Alto Contraste, Mapa do site
    ========================================================================== */
