--- a/src/brasil/gov/temas/themes/verde/css/style.css
+++ b/src/brasil/gov/temas/themes/verde/css/style.css
@@ -192,7 +192,7 @@ div#wrapper-barra-brasil {
 /* Tiles
    ========================================================================== */
 
-.tile a { color: #162937 !important; }
+.tile a { color: #2c67cd !important; }
 
 
 /* ==========================================================================
