--- a/src/brasil/gov/temas/themes/verde/css/main.css
+++ b/src/brasil/gov/temas/themes/verde/css/main.css
@@ -3138,7 +3138,6 @@ body.contraste #accessibility span {
     color: #000 !important;
 }
 
-body.contraste a,
 body.contraste h1,
 body.contraste h2,
 body.contraste h3,
@@ -3151,6 +3150,11 @@ body.contraste #content .documentDescription,
 body.contraste #content #description,
 body.contraste .nitfByline,
 body.contraste p.section { color: #fff !important; }
+
+body.contraste a {
+   color: #ff0 !important;
+   text-decoration: underline !important;
+}
 
 body.contraste .portletHeader,
 body.contraste .portletHeader a,
