elemento <a> com ausência de texto descritivo. ajuste dos links vazios acontent, anavigation e afooter para atender os critérios de acessibilidade

--- a/src/brasil/gov/temas/themes/amarelo/css/style.css
+++ b/src/brasil/gov/temas/themes/amarelo/css/style.css
@@ -74,6 +74,13 @@ div#wrapper-barra-brasil {
     color: #fff;
 }
 
+.anchor {    
+    display: block;
+    font-size: 0;
+    height: 0;
+    width: 0;
+}
+
 /* Titulo do portal
    ========================================================================== */
 
