--- a/src/brasil/gov/temas/themes/azul/css/style.css
+++ b/src/brasil/gov/temas/themes/azul/css/style.css
@@ -49,6 +49,12 @@ div#wrapper-barra-brasil {
     top: 47px;
 }
 
+.anchor {
+    display: block;
+    font-size: 0;
+    height: 0;
+    width: 0;
+}
 
 /* Menu de Acessibilidade
    ========================================================================== */
