--- a/src/brasil/gov/temas/themes/verde/css/style.css
+++ b/src/brasil/gov/temas/themes/verde/css/style.css
@@ -73,6 +73,13 @@ div#wrapper-barra-brasil {
     color: #006600;
 }
 
+.anchor {
+    display: block;
+    font-size: 0;
+    height: 0;
+    width: 0;
+}
+
 /* Titulo do portal
    ========================================================================== */
 
