AJustes de funcionamento do tema

--- a/webpack/app/padrao/_sprite.scss
+++ b/webpack/app/padrao/_sprite.scss
@@ -9,77 +9,143 @@
 //
 // At the bottom of this section, we provide information about the spritesheet itself
 // $spritesheet: width height image $spritesheet-sprites;
+$ai-name: 'ai';
+$ai-x: 0px;
+$ai-y: 55px;
+$ai-offset-x: 0px;
+$ai-offset-y: -55px;
+$ai-width: 98px;
+$ai-height: 55px;
+$ai-total-width: 184px;
+$ai-total-height: 147px;
+$ai-image: './img/sprite.png';
+$ai: (0px, 55px, 0px, -55px, 98px, 55px, 184px, 147px, './img/sprite.png', 'ai', );
 $botao-busca-name: 'botao-busca';
-$botao-busca-x: 0px;
-$botao-busca-y: 25px;
-$botao-busca-offset-x: 0px;
-$botao-busca-offset-y: -25px;
+$botao-busca-x: 66px;
+$botao-busca-y: 110px;
+$botao-busca-offset-x: -66px;
+$botao-busca-offset-y: -110px;
 $botao-busca-width: 24px;
 $botao-busca-height: 22px;
-$botao-busca-total-width: 67px;
-$botao-busca-total-height: 47px;
+$botao-busca-total-width: 184px;
+$botao-busca-total-height: 147px;
 $botao-busca-image: './img/sprite.png';
-$botao-busca: (0px, 25px, 0px, -25px, 24px, 22px, 67px, 47px, './img/sprite.png', 'botao-busca', );
+$botao-busca: (66px, 110px, -66px, -110px, 24px, 22px, 184px, 147px, './img/sprite.png', 'botao-busca', );
 $busca-name: 'busca';
-$busca-x: 28px;
-$busca-y: 0px;
-$busca-offset-x: -28px;
-$busca-offset-y: 0px;
+$busca-x: 40px;
+$busca-y: 110px;
+$busca-offset-x: -40px;
+$busca-offset-y: -110px;
 $busca-width: 26px;
 $busca-height: 25px;
-$busca-total-width: 67px;
-$busca-total-height: 47px;
+$busca-total-width: 184px;
+$busca-total-height: 147px;
 $busca-image: './img/sprite.png';
-$busca: (28px, 0px, -28px, 0px, 26px, 25px, 67px, 47px, './img/sprite.png', 'busca', );
+$busca: (40px, 110px, -40px, -110px, 26px, 25px, 184px, 147px, './img/sprite.png', 'busca', );
 $casinha-name: 'casinha';
-$casinha-x: 24px;
-$casinha-y: 25px;
-$casinha-offset-x: -24px;
-$casinha-offset-y: -25px;
+$casinha-x: 162px;
+$casinha-y: 76px;
+$casinha-offset-x: -162px;
+$casinha-offset-y: -76px;
 $casinha-width: 17px;
 $casinha-height: 12px;
-$casinha-total-width: 67px;
-$casinha-total-height: 47px;
+$casinha-total-width: 184px;
+$casinha-total-height: 147px;
 $casinha-image: './img/sprite.png';
-$casinha: (24px, 25px, -24px, -25px, 17px, 12px, 67px, 47px, './img/sprite.png', 'casinha', );
+$casinha: (162px, 76px, -162px, -76px, 17px, 12px, 184px, 147px, './img/sprite.png', 'casinha', );
 $contraste-name: 'contraste';
-$contraste-x: 54px;
-$contraste-y: 0px;
-$contraste-offset-x: -54px;
-$contraste-offset-y: 0px;
+$contraste-x: 98px;
+$contraste-y: 93px;
+$contraste-offset-x: -98px;
+$contraste-offset-y: -93px;
 $contraste-width: 13px;
 $contraste-height: 14px;
-$contraste-total-width: 67px;
-$contraste-total-height: 47px;
+$contraste-total-width: 184px;
+$contraste-total-height: 147px;
 $contraste-image: './img/sprite.png';
-$contraste: (54px, 0px, -54px, 0px, 13px, 14px, 67px, 47px, './img/sprite.png', 'contraste', );
+$contraste: (98px, 93px, -98px, -93px, 13px, 14px, 184px, 147px, './img/sprite.png', 'contraste', );
+$gg-name: 'gg';
+$gg-x: 0px;
+$gg-y: 0px;
+$gg-offset-x: 0px;
+$gg-offset-y: 0px;
+$gg-width: 134px;
+$gg-height: 55px;
+$gg-total-width: 184px;
+$gg-total-height: 147px;
+$gg-image: './img/sprite.png';
+$gg: (0px, 0px, 0px, 0px, 134px, 55px, 184px, 147px, './img/sprite.png', 'gg', );
 $nav-name: 'nav';
-$nav-x: 0px;
-$nav-y: 0px;
-$nav-offset-x: 0px;
-$nav-offset-y: 0px;
+$nav-x: 134px;
+$nav-y: 76px;
+$nav-offset-x: -134px;
+$nav-offset-y: -76px;
 $nav-width: 28px;
 $nav-height: 25px;
-$nav-total-width: 67px;
-$nav-total-height: 47px;
+$nav-total-width: 184px;
+$nav-total-height: 147px;
 $nav-image: './img/sprite.png';
-$nav: (0px, 0px, 0px, 0px, 28px, 25px, 67px, 47px, './img/sprite.png', 'nav', );
+$nav: (134px, 76px, -134px, -76px, 28px, 25px, 184px, 147px, './img/sprite.png', 'nav', );
+$rede-facebook-name: 'rede-facebook';
+$rede-facebook-x: 98px;
+$rede-facebook-y: 55px;
+$rede-facebook-offset-x: -98px;
+$rede-facebook-offset-y: -55px;
+$rede-facebook-width: 29px;
+$rede-facebook-height: 38px;
+$rede-facebook-total-width: 184px;
+$rede-facebook-total-height: 147px;
+$rede-facebook-image: './img/sprite.png';
+$rede-facebook: (98px, 55px, -98px, -55px, 29px, 38px, 184px, 147px, './img/sprite.png', 'rede-facebook', );
+$rede-instagram-name: 'rede-instagram';
+$rede-instagram-x: 134px;
+$rede-instagram-y: 38px;
+$rede-instagram-offset-x: -134px;
+$rede-instagram-offset-y: -38px;
+$rede-instagram-width: 42px;
+$rede-instagram-height: 38px;
+$rede-instagram-total-width: 184px;
+$rede-instagram-total-height: 147px;
+$rede-instagram-image: './img/sprite.png';
+$rede-instagram: (134px, 38px, -134px, -38px, 42px, 38px, 184px, 147px, './img/sprite.png', 'rede-instagram', );
+$rede-twitter-name: 'rede-twitter';
+$rede-twitter-x: 0px;
+$rede-twitter-y: 110px;
+$rede-twitter-offset-x: 0px;
+$rede-twitter-offset-y: -110px;
+$rede-twitter-width: 40px;
+$rede-twitter-height: 37px;
+$rede-twitter-total-width: 184px;
+$rede-twitter-total-height: 147px;
+$rede-twitter-image: './img/sprite.png';
+$rede-twitter: (0px, 110px, 0px, -110px, 40px, 37px, 184px, 147px, './img/sprite.png', 'rede-twitter', );
+$rede-youtube-name: 'rede-youtube';
+$rede-youtube-x: 134px;
+$rede-youtube-y: 0px;
+$rede-youtube-offset-x: -134px;
+$rede-youtube-offset-y: 0px;
+$rede-youtube-width: 50px;
+$rede-youtube-height: 38px;
+$rede-youtube-total-width: 184px;
+$rede-youtube-total-height: 147px;
+$rede-youtube-image: './img/sprite.png';
+$rede-youtube: (134px, 0px, -134px, 0px, 50px, 38px, 184px, 147px, './img/sprite.png', 'rede-youtube', );
 $vlibras-name: 'vlibras';
-$vlibras-x: 54px;
-$vlibras-y: 14px;
-$vlibras-offset-x: -54px;
-$vlibras-offset-y: -14px;
+$vlibras-x: 111px;
+$vlibras-y: 93px;
+$vlibras-offset-x: -111px;
+$vlibras-offset-y: -93px;
 $vlibras-width: 13px;
 $vlibras-height: 14px;
-$vlibras-total-width: 67px;
-$vlibras-total-height: 47px;
+$vlibras-total-width: 184px;
+$vlibras-total-height: 147px;
 $vlibras-image: './img/sprite.png';
-$vlibras: (54px, 14px, -54px, -14px, 13px, 14px, 67px, 47px, './img/sprite.png', 'vlibras', );
-$spritesheet-width: 67px;
-$spritesheet-height: 47px;
+$vlibras: (111px, 93px, -111px, -93px, 13px, 14px, 184px, 147px, './img/sprite.png', 'vlibras', );
+$spritesheet-width: 184px;
+$spritesheet-height: 147px;
 $spritesheet-image: './img/sprite.png';
-$spritesheet-sprites: ($botao-busca, $busca, $casinha, $contraste, $nav, $vlibras, );
-$spritesheet: (67px, 47px, './img/sprite.png', $spritesheet-sprites, );
+$spritesheet-sprites: ($ai, $botao-busca, $busca, $casinha, $contraste, $gg, $nav, $rede-facebook, $rede-instagram, $rede-twitter, $rede-youtube, $vlibras, );
+$spritesheet: (184px, 147px, './img/sprite.png', $spritesheet-sprites, );
 
 // The provided mixins are intended to be used with the array-like variables
 //
