--- a/webpack/app/padrao/brasilgovtemas.scss
+++ b/webpack/app/padrao/brasilgovtemas.scss
@@ -4,7 +4,7 @@
 
 $bg-color: #fff;
 $main-font: 'Titillium Web', sans-serif;
-$main-fontsize: 18px;
+$main-fontsize: 1em;
 $main-width: 100%;
 $coluna-1: 300px;
 $coluna-2: 300px;
