Review footer social icons sprite

--- a/webpack/app/scss/_basic.scss
+++ b/webpack/app/scss/_basic.scss
@@ -121,3 +121,6 @@ p.section {
 #portal-redes > #portalredes-flickr {
   text-indent: 0;
 }
+#portal-redes > #portalredes-flickr {
+  text-indent: 0;
+}
