Ajustes no topo, rodape e grid

--- a/webpack/app/padrao/brasilgovtemas.scss
+++ b/webpack/app/padrao/brasilgovtemas.scss
@@ -6,9 +6,10 @@ $bg-color: #fff;
 $main-font: 'Titillium Web', sans-serif;
 $main-fontsize: 1em;
 $main-width: 100%;
+$main-color: #0094ff;
 $coluna-1: 300px;
 $coluna-2: 300px;
-$grid-gutter: 30px;
+$grid-gutter: 1rem;
 $content-width: 1060px;
 
 $top-color: #0094ff;
@@ -23,6 +24,8 @@ $link-color: #0094ff;
 $header-color: #363636;
 $description-color: #a6a6a6;
 $byline-color: #a6a6a6;
+
+$tile-link: #333;
 
 $footer-color: #f1f1f1;
 $footer-text: #272727;
