--- a/webpack/app/padrao/_sprite.scss
+++ b/webpack/app/padrao/_sprite.scss
@@ -17,53 +17,53 @@ $ai-offset-y: -55px;
 $ai-width: 98px;
 $ai-height: 55px;
 $ai-total-width: 184px;
-$ai-total-height: 147px;
+$ai-total-height: 175px;
 $ai-image: './img/sprite.png';
-$ai: (0px, 55px, 0px, -55px, 98px, 55px, 184px, 147px, './img/sprite.png', 'ai', );
+$ai: (0px, 55px, 0px, -55px, 98px, 55px, 184px, 175px, './img/sprite.png', 'ai', );
 $botao-busca-name: 'botao-busca';
-$botao-busca-x: 66px;
+$botao-busca-x: 121px;
 $botao-busca-y: 110px;
-$botao-busca-offset-x: -66px;
+$botao-busca-offset-x: -121px;
 $botao-busca-offset-y: -110px;
 $botao-busca-width: 24px;
 $botao-busca-height: 22px;
 $botao-busca-total-width: 184px;
-$botao-busca-total-height: 147px;
+$botao-busca-total-height: 175px;
 $botao-busca-image: './img/sprite.png';
-$botao-busca: (66px, 110px, -66px, -110px, 24px, 22px, 184px, 147px, './img/sprite.png', 'botao-busca', );
+$botao-busca: (121px, 110px, -121px, -110px, 24px, 22px, 184px, 175px, './img/sprite.png', 'botao-busca', );
 $busca-name: 'busca';
-$busca-x: 40px;
+$busca-x: 95px;
 $busca-y: 110px;
-$busca-offset-x: -40px;
+$busca-offset-x: -95px;
 $busca-offset-y: -110px;
 $busca-width: 26px;
 $busca-height: 25px;
 $busca-total-width: 184px;
-$busca-total-height: 147px;
+$busca-total-height: 175px;
 $busca-image: './img/sprite.png';
-$busca: (40px, 110px, -40px, -110px, 26px, 25px, 184px, 147px, './img/sprite.png', 'busca', );
+$busca: (95px, 110px, -95px, -110px, 26px, 25px, 184px, 175px, './img/sprite.png', 'busca', );
 $casinha-name: 'casinha';
-$casinha-x: 162px;
+$casinha-x: 166px;
 $casinha-y: 76px;
-$casinha-offset-x: -162px;
+$casinha-offset-x: -166px;
 $casinha-offset-y: -76px;
 $casinha-width: 17px;
 $casinha-height: 12px;
 $casinha-total-width: 184px;
-$casinha-total-height: 147px;
+$casinha-total-height: 175px;
 $casinha-image: './img/sprite.png';
-$casinha: (162px, 76px, -162px, -76px, 17px, 12px, 184px, 147px, './img/sprite.png', 'casinha', );
+$casinha: (166px, 76px, -166px, -76px, 17px, 12px, 184px, 175px, './img/sprite.png', 'casinha', );
 $contraste-name: 'contraste';
-$contraste-x: 98px;
-$contraste-y: 93px;
-$contraste-offset-x: -98px;
-$contraste-offset-y: -93px;
+$contraste-x: 166px;
+$contraste-y: 88px;
+$contraste-offset-x: -166px;
+$contraste-offset-y: -88px;
 $contraste-width: 13px;
 $contraste-height: 14px;
 $contraste-total-width: 184px;
-$contraste-total-height: 147px;
+$contraste-total-height: 175px;
 $contraste-image: './img/sprite.png';
-$contraste: (98px, 93px, -98px, -93px, 13px, 14px, 184px, 147px, './img/sprite.png', 'contraste', );
+$contraste: (166px, 88px, -166px, -88px, 13px, 14px, 184px, 175px, './img/sprite.png', 'contraste', );
 $gg-name: 'gg';
 $gg-x: 0px;
 $gg-y: 0px;
@@ -72,20 +72,31 @@ $gg-offset-y: 0px;
 $gg-width: 134px;
 $gg-height: 55px;
 $gg-total-width: 184px;
-$gg-total-height: 147px;
+$gg-total-height: 175px;
 $gg-image: './img/sprite.png';
-$gg: (0px, 0px, 0px, 0px, 134px, 55px, 184px, 147px, './img/sprite.png', 'gg', );
+$gg: (0px, 0px, 0px, 0px, 134px, 55px, 184px, 175px, './img/sprite.png', 'gg', );
 $nav-name: 'nav';
-$nav-x: 134px;
-$nav-y: 76px;
-$nav-offset-x: -134px;
-$nav-offset-y: -76px;
+$nav-x: 67px;
+$nav-y: 110px;
+$nav-offset-x: -67px;
+$nav-offset-y: -110px;
 $nav-width: 28px;
 $nav-height: 25px;
 $nav-total-width: 184px;
-$nav-total-height: 147px;
+$nav-total-height: 175px;
 $nav-image: './img/sprite.png';
-$nav: (134px, 76px, -134px, -76px, 28px, 25px, 184px, 147px, './img/sprite.png', 'nav', );
+$nav: (67px, 110px, -67px, -110px, 28px, 25px, 184px, 175px, './img/sprite.png', 'nav', );
+$rede-facebook-topo-name: 'rede-facebook-topo';
+$rede-facebook-topo-x: 0px;
+$rede-facebook-topo-y: 147px;
+$rede-facebook-topo-offset-x: 0px;
+$rede-facebook-topo-offset-y: -147px;
+$rede-facebook-topo-width: 25px;
+$rede-facebook-topo-height: 28px;
+$rede-facebook-topo-total-width: 184px;
+$rede-facebook-topo-total-height: 175px;
+$rede-facebook-topo-image: './img/sprite.png';
+$rede-facebook-topo: (0px, 147px, 0px, -147px, 25px, 28px, 184px, 175px, './img/sprite.png', 'rede-facebook-topo', );
 $rede-facebook-name: 'rede-facebook';
 $rede-facebook-x: 98px;
 $rede-facebook-y: 55px;
@@ -94,9 +105,9 @@ $rede-facebook-offset-y: -55px;
 $rede-facebook-width: 29px;
 $rede-facebook-height: 38px;
 $rede-facebook-total-width: 184px;
-$rede-facebook-total-height: 147px;
+$rede-facebook-total-height: 175px;
 $rede-facebook-image: './img/sprite.png';
-$rede-facebook: (98px, 55px, -98px, -55px, 29px, 38px, 184px, 147px, './img/sprite.png', 'rede-facebook', );
+$rede-facebook: (98px, 55px, -98px, -55px, 29px, 38px, 184px, 175px, './img/sprite.png', 'rede-facebook', );
 $rede-instagram-name: 'rede-instagram';
 $rede-instagram-x: 134px;
 $rede-instagram-y: 38px;
@@ -105,9 +116,20 @@ $rede-instagram-offset-y: -38px;
 $rede-instagram-width: 42px;
 $rede-instagram-height: 38px;
 $rede-instagram-total-width: 184px;
-$rede-instagram-total-height: 147px;
+$rede-instagram-total-height: 175px;
 $rede-instagram-image: './img/sprite.png';
-$rede-instagram: (134px, 38px, -134px, -38px, 42px, 38px, 184px, 147px, './img/sprite.png', 'rede-instagram', );
+$rede-instagram: (134px, 38px, -134px, -38px, 42px, 38px, 184px, 175px, './img/sprite.png', 'rede-instagram', );
+$rede-twitter-topo-name: 'rede-twitter-topo';
+$rede-twitter-topo-x: 40px;
+$rede-twitter-topo-y: 110px;
+$rede-twitter-topo-offset-x: -40px;
+$rede-twitter-topo-offset-y: -110px;
+$rede-twitter-topo-width: 27px;
+$rede-twitter-topo-height: 28px;
+$rede-twitter-topo-total-width: 184px;
+$rede-twitter-topo-total-height: 175px;
+$rede-twitter-topo-image: './img/sprite.png';
+$rede-twitter-topo: (40px, 110px, -40px, -110px, 27px, 28px, 184px, 175px, './img/sprite.png', 'rede-twitter-topo', );
 $rede-twitter-name: 'rede-twitter';
 $rede-twitter-x: 0px;
 $rede-twitter-y: 110px;
@@ -116,9 +138,20 @@ $rede-twitter-offset-y: -110px;
 $rede-twitter-width: 40px;
 $rede-twitter-height: 37px;
 $rede-twitter-total-width: 184px;
-$rede-twitter-total-height: 147px;
+$rede-twitter-total-height: 175px;
 $rede-twitter-image: './img/sprite.png';
-$rede-twitter: (0px, 110px, 0px, -110px, 40px, 37px, 184px, 147px, './img/sprite.png', 'rede-twitter', );
+$rede-twitter: (0px, 110px, 0px, -110px, 40px, 37px, 184px, 175px, './img/sprite.png', 'rede-twitter', );
+$rede-youtube-topo-name: 'rede-youtube-topo';
+$rede-youtube-topo-x: 134px;
+$rede-youtube-topo-y: 76px;
+$rede-youtube-topo-offset-x: -134px;
+$rede-youtube-topo-offset-y: -76px;
+$rede-youtube-topo-width: 32px;
+$rede-youtube-topo-height: 28px;
+$rede-youtube-topo-total-width: 184px;
+$rede-youtube-topo-total-height: 175px;
+$rede-youtube-topo-image: './img/sprite.png';
+$rede-youtube-topo: (134px, 76px, -134px, -76px, 32px, 28px, 184px, 175px, './img/sprite.png', 'rede-youtube-topo', );
 $rede-youtube-name: 'rede-youtube';
 $rede-youtube-x: 134px;
 $rede-youtube-y: 0px;
@@ -127,25 +160,25 @@ $rede-youtube-offset-y: 0px;
 $rede-youtube-width: 50px;
 $rede-youtube-height: 38px;
 $rede-youtube-total-width: 184px;
-$rede-youtube-total-height: 147px;
+$rede-youtube-total-height: 175px;
 $rede-youtube-image: './img/sprite.png';
-$rede-youtube: (134px, 0px, -134px, 0px, 50px, 38px, 184px, 147px, './img/sprite.png', 'rede-youtube', );
+$rede-youtube: (134px, 0px, -134px, 0px, 50px, 38px, 184px, 175px, './img/sprite.png', 'rede-youtube', );
 $vlibras-name: 'vlibras';
-$vlibras-x: 111px;
+$vlibras-x: 98px;
 $vlibras-y: 93px;
-$vlibras-offset-x: -111px;
+$vlibras-offset-x: -98px;
 $vlibras-offset-y: -93px;
 $vlibras-width: 13px;
 $vlibras-height: 14px;
 $vlibras-total-width: 184px;
-$vlibras-total-height: 147px;
+$vlibras-total-height: 175px;
 $vlibras-image: './img/sprite.png';
-$vlibras: (111px, 93px, -111px, -93px, 13px, 14px, 184px, 147px, './img/sprite.png', 'vlibras', );
+$vlibras: (98px, 93px, -98px, -93px, 13px, 14px, 184px, 175px, './img/sprite.png', 'vlibras', );
 $spritesheet-width: 184px;
-$spritesheet-height: 147px;
+$spritesheet-height: 175px;
 $spritesheet-image: './img/sprite.png';
-$spritesheet-sprites: ($ai, $botao-busca, $busca, $casinha, $contraste, $gg, $nav, $rede-facebook, $rede-instagram, $rede-twitter, $rede-youtube, $vlibras, );
-$spritesheet: (184px, 147px, './img/sprite.png', $spritesheet-sprites, );
+$spritesheet-sprites: ($ai, $botao-busca, $busca, $casinha, $contraste, $gg, $nav, $rede-facebook-topo, $rede-facebook, $rede-instagram, $rede-twitter-topo, $rede-twitter, $rede-youtube-topo, $rede-youtube, $vlibras, );
+$spritesheet: (184px, 175px, './img/sprite.png', $spritesheet-sprites, );
 
 // The provided mixins are intended to be used with the array-like variables
 //
