--- a/webpack/app/scss/_grid.scss
+++ b/webpack/app/scss/_grid.scss
@@ -1,7 +1,19 @@
 /* grid cover */
 @media (min-width: 600px) {
-  .tile {
-    margin: ($grid-gutter / 2);
+  div.row {
+    display: flex !important;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    float: none;
+    margin-right: -$grid-gutter;
+    margin-left: -$grid-gutter;
+    margin-bottom: $grid-gutter;
+    width: inherit !important;
+  }
+  .column {
+    padding-right: $grid-gutter;
+    padding-left: $grid-gutter;
+    box-sizing: border-box;
   }
   .col-md-1,
   .col-md-2,
@@ -15,43 +27,55 @@
   .col-md-10,
   .col-md-11,
   .col-md-12 {
-    float: left;
+    display: inline-flex;
   }
   .col-md-12 {
-    width: 100%;
+    flex-basis: 100%;
+    max-width: 100%;
   }
   .col-md-11 {
-    width: 91.66666667%;
+    flex-basis: 91.66666667%;
+    max-width: 91.66666667%;
   }
   .col-md-10 {
-    width: 83.33333333%;
+    flex-basis: 83.33333333%;
+    max-width: 83.33333333%;
   }
   .col-md-9 {
-    width: 75%;
+    flex-basis: 75%;
+    max-width: 75%;
   }
   .col-md-8 {
-    width: 66.66666667%;
+    flex-basis: 66.66666667%;
+    max-width: 66.66666667%;
   }
   .col-md-7 {
-    width: 58.33333333%;
+    flex-basis: 58.33333333%;
+    max-width: 58.33333333%;
   }
   .col-md-6 {
-    width: 50%;
+    flex-basis: 50%;
+    max-width: 50%;
   }
   .col-md-5 {
-    width: 41.66666667%;
+    flex-basis: 41.66666667%;
+    max-width: 41.66666667%;
   }
   .col-md-4 {
-    width: 33.33333333%;
+    flex-basis: 33.33333333%;
+    max-width: 33.33333333%;
   }
   .col-md-3 {
-    width: 25%;
+    flex-basis: 25%;
+    max-width: 25%;
   }
   .col-md-2 {
-    width: 16.66666667%;
+    flex-basis: 16.66666667%;
+    max-width: 16.66666667%;
   }
   .col-md-1 {
-    width: 8.33333333%;
+    flex-basis: 8.33333333%;
+    max-width: 8.33333333%;
   }
 }
 
