--- a/webpack/app/scss/_header.scss
+++ b/webpack/app/scss/_header.scss
@@ -21,31 +21,51 @@ header#main-header {
   }
 
 /********** Navegacao **********/
-  nav {
+  .navigation-wrapper {
+    display: none;
     background-color: $nav-color;
     color: $nav-link;
     border-bottom: 1px solid #f1f1f1;
-    padding: 12px 0;
-    display: none;
+    padding: 30px 0;
 
-    ul:before {
-      content: "\25B2";
-      position: absolute;
-      top: -50px;
-      left: 15px;
-      color: #fff;
-      font-size: 36px;
+    h4 {
+      margin-bottom: 20px;
     }
-    ul {
-      @extend .ct-width;
-      position: relative;
+
+    ul li {
+      display: list-item;
     }
+    #portal-redes li {
+      display: inline-block;
+    }
+  }
+
+  .navigation-content:before {
+    content: "\25B2";
+    position: absolute;
+    top: -62px;
+    left: -4px;
+    color: #fff;
+    font-size: 36px;
+  }
+  .navigation-content {
+    @extend .ct-width;
+    position: relative;
+    display: flex;
 
     a:link,
     a:hover,
     a:visited {
-      color: $nav-link;
+      color: lighten( $nav-link, 60% );
     }
+  }
+  .navigation-cell {
+    width: 25%;
+    border-right: 1px solid #f1f1f1;
+    padding: 0 20px;
+  }
+  #navigation-redes {
+    border-right: none;
   }
 }
 
@@ -56,48 +76,50 @@ header#main-header {
 
   .ico-navegacao {
     display: inline-block;
+    cursor: pointer;
     margin-right: 10px;
     text-indent: -3000px;
     @include sprite($nav);
   }
   .ico-busca {
     display: inline-block;
+    cursor: pointer;
     text-indent: -3000px;
     @include sprite($busca);
   }
 }
 /********** Links do topo **********/
-.header-links {
+.header-accessibility {
     width: 280px;
     text-align: right;
     text-transform: uppercase;
     font-size: 70%;
 
-  #siteaction-contraste {
-	  display: inline-block;
-	  position: relative;
+  .link-contraste {
+    display: inline-block;
+    position: relative;
     padding: 0 20px 0 20px;
     border-right: 1px solid rgba(256, 256, 256, 0.2);
   }
-  #siteaction-contraste:before {
-  	content: "";
-  	position: absolute;
-  	top: 3px;
-  	left: 0;
-  	@include sprite($contraste);
+  .link-contraste:before {
+    content: "";
+    position: absolute;
+    top: 3px;
+    left: 0;
+    @include sprite($contraste);
   }
   .link-vlibras {
-	display: inline-block;
-	position: relative;
+    display: inline-block;
+    position: relative;
     padding: 0 0 0 20px;
     margin-left: 20px;
   }
   .link-vlibras:before {
-	content: "";
-	position: absolute;
-	top: 3px;
-	left: 0;
-	@include sprite($vlibras);
+    content: "";
+    position: absolute;
+    top: 3px;
+    left: 0;
+    @include sprite($vlibras);
   }
 }
 
@@ -152,7 +174,7 @@ header#main-header {
   .searchButton {
     border: none;
     text-indent: -3000px;
-	@include sprite($botao-busca);
+  @include sprite($botao-busca);
   }
 }
 
@@ -170,15 +192,15 @@ header#main-header {
   #breadcrumbs-home a {
     text-indent: -3000px;
     display: inline-block;
-	position: relative;
-	width: 20px;
+  position: relative;
+  width: 20px;
   }
   #breadcrumbs-home a:before {
-	content: "";
-	position: absolute;
-	top: 6px;
-	left: 0;
-	@include sprite($casinha);
+  content: "";
+  position: absolute;
+  top: 6px;
+  left: 0;
+  @include sprite($casinha);
   }
   a,
   a:hover {
