--- a/webpack/app/scss/_header.scss
+++ b/webpack/app/scss/_header.scss
@@ -154,9 +154,29 @@ header#main-header {
   margin: 0;
   display: none;
   border-bottom: 1px solid #f1f1f1;
+  position: relative;
 
   h2 {
     color: $top-text;
+  }
+
+  legend {
+    height: inherit;
+    width: 50%;
+    margin: auto;
+    overflow: visible;
+    color: #fff;
+    background-color: transparent;
+    position: absolute;
+    font-size: 30px;
+    top: 100px;
+    font-weight: bold;
+  }
+
+  fieldset {
+    border: none;
+    padding: 0;
+    margin: 0;
   }
 
   form {
